--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -52,6 +52,7 @@
 
             window.photoURL = user.photoURL
             window.loginCompleted()
+            console.log('logged in')
 
           }).catch(function (error) {
             // Handle Errors here.
@@ -62,6 +63,7 @@
             // The firebase.auth.AuthCredential type that was used.
             var credential = error.credential;
             // ...
+            console.error(error.code, error.message, error.email, error.credential)
           });
         })
       })
